Fix Blog horizontal scroll

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -249,6 +249,7 @@
 
   &__navigation {
     border-bottom: 1px solid $purple-heart;
+    overflow: hidden;
     padding: 20px 0 50px 0;
 
     p {
